fix(security): resolve CORS policy block for vercel frontend